vpf_mocks included theory.options, not mock.options

--- a/mocks/vpf_mocks/Makefile
+++ b/mocks/vpf_mocks/Makefile
@@ -5,14 +5,14 @@ INSTALL_BIN_DIR := $(ROOT_DIR)/bin
 UTILS_DIR:=$(ROOT_DIR)/utils
 IO_DIR:=$(ROOT_DIR)/io
 
-include $(ROOT_DIR)/theory.options $(ROOT_DIR)/common.mk 
+include $(ROOT_DIR)/mocks.options $(ROOT_DIR)/common.mk
 
 LIBNAME:=countspheres_mocks
 LIBRARY:=lib$(LIBNAME).a
 LIBSRC:=countspheres_mocks.c countspheres_mocks_impl_float.c countspheres_mocks_impl_double.c \
         $(UTILS_DIR)/gridlink_impl_float.c $(UTILS_DIR)/gridlink_impl_double.c \
         $(UTILS_DIR)/utils.c $(UTILS_DIR)/progressbar.c $(UTILS_DIR)/cpu_features.c \
-	$(UTILS_DIR)/set_cosmo_dist.c $(UTILS_DIR)/cosmology_params.c 
+	$(UTILS_DIR)/set_cosmo_dist.c $(UTILS_DIR)/cosmology_params.c
 LIBRARY_HEADERS := $(LIBNAME).h
 
 TARGET := vpf_mocks
@@ -32,7 +32,7 @@ LIBOBJS :=$(LIBSRC:.c=.o)
 EXTRA_INCL:=$(GSL_CFLAGS)
 EXTRA_LINK:=$(GSL_LINK)
 
-all: $(TARGET) $(TARGETSRC) Makefile $(ROOT_DIR)/theory.options $(ROOT_DIR)/common.mk
+all: $(TARGET) $(TARGETSRC) Makefile $(ROOT_DIR)/mocks.options $(ROOT_DIR)/common.mk
 
 countspheres_mocks_impl_float.o:countspheres_mocks_impl_float.c countspheres_mocks_impl_float.h vpf_mocks_kernels_float.c $(UTILS_DIR)/gridlink_impl_float.h $(UTILS_DIR)/cellarray_float.h
 countspheres_mocks_impl_double.o:countspheres_mocks_impl_double.c countspheres_mocks_impl_double.h vpf_mocks_kernels_double.c $(UTILS_DIR)/gridlink_impl_double.h $(UTILS_DIR)/cellarray_double.h
@@ -49,10 +49,10 @@ distclean: clean | $(INSTALL_LIB_DIR) $(INSTALL_HEADERS_DIR) $(INSTALL_BIN_DIR)
 	cd $(INSTALL_BIN_DIR) && $(RM) $(TARGET)
 
 clean:
-	$(RM) $(TARGET) $(TARGETOBJS) $(LIBRARY) countspheres_mocks_impl_float.[ch] countspheres_mocks_impl_double.[ch] vpf_mocks_kernels_float.c vpf_mocks_kernels_double.c 
+	$(RM) $(TARGET) $(TARGETOBJS) $(LIBRARY) countspheres_mocks_impl_float.[ch] countspheres_mocks_impl_double.[ch] vpf_mocks_kernels_float.c vpf_mocks_kernels_double.c
 	$(RM) -R vpf_mocks.dSYM
 
-tests: 
+tests:
 	$(MAKE) -C ../tests vpf_mocks
 
 
