--- a/theory/DD/Makefile
+++ b/theory/DD/Makefile
@@ -32,9 +32,9 @@ TARGETOBJS  := $(TARGETSRC:.c=.o)
 LIBOBJS := $(LIBSRC:.c=.o)
 
 ifeq (PERIODIC,$(findstring PERIODIC,$(OPT)))
-  GC_BIN := DD
+  GC_BIN=DD
 else
-  GC_BIN := DD_nonperiodic
+  GC_BIN=DD_nonperiodic
 endif
 
 all: $(TARGET) $(LIBOBJS) $(TARGETOBJS) $(TARGETSRC) $(ROOT_DIR)/theory.options $(ROOT_DIR)/common.mk Makefile
