--- a/theory/DD/Makefile
+++ b/theory/DD/Makefile
@@ -31,11 +31,13 @@ INCL   := countpairs_kernels_float.c countpairs_kernels_double.c countpairs_kern
 TARGETOBJS  := $(TARGETSRC:.c=.o)
 LIBOBJS := $(LIBSRC:.c=.o)
 
-ifeq (PERIODIC,$(findstring PERIODIC,$(OPT)))
-  GC_BIN=DD
-else
-  GC_BIN=DD_nonperiodic
-endif
+# ifeq (PERIODIC,$(findstring PERIODIC,$(OPT)))
+#   GC_BIN=DD
+# else
+#   GC_BIN=DD_nonperiodic
+# endif
+
+GC_BIN=DD
 
 all: $(TARGET) $(LIBOBJS) $(TARGETOBJS) $(TARGETSRC) $(ROOT_DIR)/theory.options $(ROOT_DIR)/common.mk Makefile
   cp $(TARGET) $(GC_DIR)/$(GC_BIN)
