--- a/theory/DD/Makefile
+++ b/theory/DD/Makefile
@@ -31,16 +31,14 @@ INCL   := countpairs_kernels_float.c countpairs_kernels_double.c countpairs_kern
 TARGETOBJS  := $(TARGETSRC:.c=.o)
 LIBOBJS := $(LIBSRC:.c=.o)
 
-# ifeq (PERIODIC,$(findstring PERIODIC,$(OPT)))
-#   GC_BIN=DD
-# else
-#   GC_BIN=DD_nonperiodic
-# endif
-
-GC_BIN=DD
+ifeq (PERIODIC,$(findstring PERIODIC,$(OPT)))
+  GC_BIN=DD
+else
+  GC_BIN=DD_nonperiodic
+endif
 
 all: $(TARGET) $(LIBOBJS) $(TARGETOBJS) $(TARGETSRC) $(ROOT_DIR)/theory.options $(ROOT_DIR)/common.mk Makefile
-  cp $(TARGET) $(GC_DIR)/$(GC_BIN)
+    cp $(TARGET) $(GC_DIR)/$(GC_BIN)
 libs: lib
 lib:  $(LIBRARY)
 install: $(INSTALL_BIN_DIR)/$(TARGET) $(INSTALL_LIB_DIR)/$(LIBRARY) $(INSTALL_HEADERS_DIR)/$(LIBRARY_HEADERS)
