--- a/theory/DD/Makefile
+++ b/theory/DD/Makefile
@@ -37,9 +37,8 @@ else
   GC_BIN=DD_nonperiodic
 endif
 
-all:
-  $(TARGET) $(LIBOBJS) $(TARGETOBJS) $(TARGETSRC) $(ROOT_DIR)/theory.options $(ROOT_DIR)/common.mk Makefile
-  cp $(TARGET) $(GC_DIR)/$(GC_BIN)
+all: $(TARGET) $(LIBOBJS) $(TARGETOBJS) $(TARGETSRC) $(ROOT_DIR)/theory.options $(ROOT_DIR)/common.mk Makefile
+  cp $(TARGET) $(GC_DIR)
 
 libs: lib
 lib:  $(LIBRARY)
