editing makefiles to cp bin to gcdir

--- a/mocks/vpf_mocks/Makefile
+++ b/mocks/vpf_mocks/Makefile
@@ -5,6 +5,8 @@ INSTALL_BIN_DIR := $(ROOT_DIR)/bin
 UTILS_DIR:=$(ROOT_DIR)/utils
 IO_DIR:=$(ROOT_DIR)/io
 
+GC_DIR := ../../../codes/bin
+
 include $(ROOT_DIR)/mocks.options $(ROOT_DIR)/common.mk
 
 LIBNAME:=countspheres_mocks
@@ -33,7 +35,7 @@ EXTRA_INCL:=$(GSL_CFLAGS)
 EXTRA_LINK:=$(GSL_LINK)
 
 all: $(TARGET) $(TARGETSRC) Makefile $(ROOT_DIR)/mocks.options $(ROOT_DIR)/common.mk
-
+	cp $(TARGET) $(GC_DIR)
 countspheres_mocks_impl_float.o:countspheres_mocks_impl_float.c countspheres_mocks_impl_float.h vpf_mocks_kernels_float.c $(UTILS_DIR)/gridlink_impl_float.h $(UTILS_DIR)/cellarray_float.h
 countspheres_mocks_impl_double.o:countspheres_mocks_impl_double.c countspheres_mocks_impl_double.h vpf_mocks_kernels_double.c $(UTILS_DIR)/gridlink_impl_double.h $(UTILS_DIR)/cellarray_double.h
 countspheres_mocks.o: countspheres_mocks.c countspheres_mocks_impl_float.h countspheres_mocks_impl_double.h
